--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ layout: default
           <span class="post-meta">{{ post.date | date: date_format }}</span>
 
           <h3>
-            <a class="post-link" href="{{ post.url | relative_url }}">{{ 📃 post.title | escape }}</a>
+            <a class="post-link" href="{{ post.url | relative_url }}">📃 {{ post.title | escape }}</a>
           </h3>
         </li>
       {% endfor %}
