--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
             {% endif %}
             -->
             {% if site.title %}
-              {{ site.title | escape }}
+              {{ page.title | escape }}
             {% endif %}
             </li>
             {% if site.email %}
