--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
+  <head>
+    <title>(●'◡'●)</title>
+  </head>
   {% include head.html %}
 
   <body>
